Add an item to the limitations.

--- a/dos/simulation_settings.html
+++ b/dos/simulation_settings.html
@@ -176,6 +176,7 @@
 <li>Shields are always active.</li>
 <li>When characters use Staff of Homa, their HP is below 50%.</li>
 <li>Amos' Bow travels the maximum distance.</li>
+<li>Elemental resonance is not implemented.</li>
 </ul>
 
                     </main>
